特征散列总结

--- a/DataMining-Actions/00-feature-engeneering.ipynb
+++ b/DataMining-Actions/00-feature-engeneering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,12 +10,12 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.20.1\n",
-      "pandas:      1.2.4\n",
-      "matplotlib:  3.3.4\n",
-      "sklearn:     0.24.1\n",
-      "seaborn:     0.11.1\n",
-      "plotly:      5.1.0\n"
+      "numpy:       1.22.3\n",
+      "pandas:      1.4.2\n",
+      "matplotlib:  3.5.1\n",
+      "sklearn:     1.0.2\n",
+      "seaborn:     0.11.2\n",
+      "plotly:      5.8.2\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Project-Workspace\\Python-Projects\n"
+      "/Users/danielzhang/Documents/Python-Projects/DataAnalysis\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -95,10 +95,10 @@
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
+       "'/Users/danielzhang/Documents/Python-Projects/DataAnalysis'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1673,7 @@
     "  + 优点：同dummy编码；参照level使用全为 -1 的向量表示，因此每个新特征的系数\n",
     "  + 缺点：全 -1 的参照level是个密集向量，计算和存储的成本都比较高\n",
     "  \n",
-    "> 上述3中编码都**只适用于分类特征的类别数量不多的情况**，如果类别数量很多，上述3中编码方式效率都不高，需要采用其他的方式。"
+    "> 上述3中编码都**只适用于分类特征的类别数量不多的情况**，如果类别数量很多，上述3中编码方式效率都不高，需要采用其他的方式，比如下面的**特征散列**方法。"
    ]
   },
   {
@@ -2763,7 +2763,271 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 特征散列-???"
+    "### 特征散列-KEY\n",
+    "\n",
+    "特征散列是利用哈希函数对高维特征进行压缩的过程，有关特征散列的详细说明，可以参考如下文档:\n",
+    "+ 论文 Feature Hashing for Large Scale Multitask Learning (最早提出此方法的文章)\n",
+    "+ [wikipedia -> Feature hasing](https://en.wikipedia.org/wiki/Feature_hashing)\n",
+    "+ [机器学习技巧之feature_hashing](http://whbzju.github.io/blog/2015/02/10/feature-hashing/)\n",
+    "+ [sklearn -> 6.2.2. Feature hashing](https://scikit-learn.org/stable/modules/feature_extraction.html#feature-hashing)\n",
+    "+ [知乎：如何用通俗的语言解释CTR和推荐系统中常用的Feature Hashing技术以及其对应的优缺点？](https://www.zhihu.com/question/264165760)\n",
+    "\n",
+    "这个过程大致可以总结为如下：   \n",
+    "给定一个高维特征集合 $T = \\{t_1, t_2, .., t_M\\}$，其中的元素 $t_i$ 是可散列的对象（通常为字符串，表示特征名称），然后需要将这个 $M$ 维的特征压缩到 $N$ 维（$N<M$）.  \n",
+    "定义一个哈希函数 $h: T \\rightarrow \\{1,2,..,N\\}$，它做的事，是将根据**特征名称**计算哈希值，然后对 $N$ 取模，得到的整数 $i$ 作为索引，表示 $N$ 维特征空间的第 $i$ 个特征维度。    \n",
+    "此外，还定义一个用于确定符号的哈希函数 $\\xi: T \\rightarrow \\{-1, +1\\}$。  \n",
+    "设 $x=(x_1, x_2,.., x_M)$ 是 $M$ 维特征空间的一个样本，它经过特征散列后在 $N$ 维空间的向量为 $\\phi(x)=(y_1, y_2, .., y_N)$ ，其中各个特征的取值计算方式为:   \n",
+    "$$\\phi(x)_i = y_i = \\sum_{j:h(j)=i}^{M}\\xi(j){x_j}$$\n",
+    "这个公式的意思是，$N$ 维空间中的第 $i$ 个维度的值，等于那些在 $M$ 维空间中特征名称哈希值等于 $i$ （即 $h(j)=i$）的特征值之和。  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "skleran中对此的实现类是`sklearn.feature_extraction.FeatureHasher()`类。  \n",
+    "`FeatureHasher(n_features=1048576, *, input_type='dict', dtype=<class 'numpy.float64'>, alternate_sign=True)`  \n",
+    "+ `n_features`：压缩后的特征维数，默认为 $2^{20}$，最大只能为 $2^{31}-1$，因为计算哈希值使用的模为32位整数\n",
+    "+ `input_type`：接受的输入形式，**需要是 (feature_name, value) 这样的成对数据形式**。可选值如下：  \n",
+    "  + dict：默认值，例如 `[{'a':1, 'b':1}, {'a':1, 'c':3}]`\n",
+    "  + pair：形如 `[[('a', 1), ('b', 1), ('c', 1)]]`，注意，必须是嵌套列表，对应于二维array，不过只有一行数据\n",
+    "  + string：形如 `[['a', 'b', 'c']]`，也必须是嵌套列表，对应于二维array，只有一行数据\n",
+    "+ `alternate_sign`：布尔值，默认为`True`，表示是否使用符号，也就是上面的符号哈希函数 $\\xi$ \n",
+    "\n",
+    "特别说明，`FeatureHaser().transform(X_raw)`中的输入有如下特点：  \n",
+    "1. `X_raw`需要是嵌套的可迭代对象，内外两层，类似于  `[ [], [] ]`，对应于二维array；  \n",
+    "2. 内层可迭代对象的元素需要是 (feature_name, value) 这样的成对元素，feature_name是特征名称，会使用 $h$ 得到该特征在新空间中的特征索引，**value必须是int，对应的就是该特征的取值，也就是上面的 $x_j$；**   \n",
+    "3. 对于`input_type='string'`来说，value 默认=1，也就是 `[['a', 'b']]` 会被转换成 `[[('a',1), ('b', 1)]]`。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面通过例子来说明`FeatureHasher`的使用，特别是它的输入中 (feature_name, value) 这个含义。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import FeatureHasher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 下面这 3 种形式，对应于 2 行样本，每个样本最终的映射结果是一样的\n",
+    "D1 = [\n",
+    "    {'a': 1, 'b': 1}, \n",
+    "    {'a': 1, 'c': 1}\n",
+    "]\n",
+    "D2 = [\n",
+    "    [('a', 1), ('b', 1)], \n",
+    "    [('a', 1), ('c', 1)]\n",
+    "]\n",
+    "D3 = [\n",
+    "    ['a', 'b'], \n",
+    "    ['a', 'c']\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  1.,  0.,  0., -1.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0., -1.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1 = FeatureHasher(n_features=6, input_type='dict')\n",
+    "h1.transform(D1).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  1.,  0.,  0., -1.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0., -1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h2 = FeatureHasher(n_features=6, input_type='pair')\n",
+    "h2.transform(D2).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  1.,  0.,  0., -1.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0., -1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h3 = FeatureHasher(n_features=6, input_type='string')\n",
+    "h3.transform(D3).toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 观察(feature_name, value)中，feature_name 的作用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D11:  [[ 0. -1.  1.  0.  0. -1.  0.  0.]]\n",
+      "D12:  [[ 0.  0.  1.  0.  0. -1.  0.  0.]]\n",
+      "D13:  [[ 0. -1.  1.  0.  0.  0.  0.  0.]]\n",
+      "D14:  [[ 0. -1.  0.  0.  0. -1.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D11 = [['a', 'b', 'c']]\n",
+    "D12 = [['a', 'b']]\n",
+    "D13 = [['a', 'c']]\n",
+    "D14 = [['b', 'c']]\n",
+    "\n",
+    "# 可以看出特征映射的关系为： a->第 2 维 , b->第 5 维 ,c->第 1 维\n",
+    "h1 = FeatureHasher(n_features=8, input_type='string')\n",
+    "print('D11: ', h1.transform(D11).toarray())\n",
+    "print('D12: ', h1.transform(D12).toarray())\n",
+    "print('D13: ', h1.transform(D13).toarray())\n",
+    "print('D14: ', h1.transform(D14).toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 观察(feature_name, value)中，value 的作用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D21:  [[ 0. -3.  1.  0.  0. -2.  0.  0.]]\n",
+      "D22:  [[ 0. -3.  4.  0.  0. -2.  0.  0.]]\n",
+      "D23:  [[ 0. -3.  1.  0.  0. -2.  0.  0.]]\n",
+      "D24:  [[ 0. -3.  3.  0.  0. -2.  0.  0.]]\n",
+      "D25:  [[ 0. -3.  5.  0.  0. -2.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D21 = [[ ('a', 1), ('b', 2), ('c', 3) ]]\n",
+    "D22 = [[ ('a', 4), ('b', 2), ('c', 3) ]]\n",
+    "D23 = [[ ('a', 1), ('b', 2), ('c', 3) ]]\n",
+    "D24 = [[ ('a', 1), ('b', 2), ('c', 3), ('a', 2) ]]\n",
+    "D25 = [[ ('a', 1), ('b', 2), ('c', 3), ('a', 4) ]]\n",
+    "\n",
+    "# 可以看出，特征映射后值为 求和，比如 a 映射到第 2 维，值为 所有a的值之和\n",
+    "h2 = FeatureHasher(n_features=8, input_type='pair')\n",
+    "print('D21: ', h2.transform(D21).toarray())\n",
+    "print('D22: ', h2.transform(D22).toarray())\n",
+    "print('D23: ', h2.transform(D23).toarray())\n",
+    "print('D24: ', h2.transform(D24).toarray())\n",
+    "print('D25: ', h2.transform(D25).toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 观察特征散列的冲突"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D31:  [[ 1. -1.]]\n",
+      "D32:  [[ 1. -2.]]\n",
+      "D33:  [[1. 0.]]\n",
+      "D34:  [[ 0. -2.]]\n",
+      "-------------------------\n",
+      "D31:  [[1. 1.]]\n",
+      "D32:  [[1. 2.]]\n",
+      "D33:  [[1. 2.]]\n",
+      "D34:  [[0. 4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D31 = [['a', 'b']]\n",
+    "D32 = [['a', 'b', 'c']]\n",
+    "D33 = [['a', 'b', 'd']]\n",
+    "D34 = [['b', 'b', 'c', 'd']]\n",
+    "\n",
+    "# 映射的特征空间只有 2 维，会发生冲突\n",
+    "h3 = FeatureHasher(n_features=2, input_type='string')\n",
+    "print('D31: ', h3.transform(D31).toarray())\n",
+    "print('D32: ', h3.transform(D32).toarray())\n",
+    "print('D33: ', h3.transform(D33).toarray())\n",
+    "print('D34: ', h3.transform(D34).toarray())\n",
+    "\n",
+    "print('-------------------------')\n",
+    "\n",
+    "h3 = FeatureHasher(n_features=2, input_type='string', alternate_sign=False)\n",
+    "print('D31: ', h3.transform(D31).toarray())\n",
+    "print('D32: ', h3.transform(D32).toarray())\n",
+    "print('D33: ', h3.transform(D33).toarray())\n",
+    "print('D34: ', h3.transform(D34).toarray())"
    ]
   },
   {
@@ -6513,9 +6777,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "data-analysis(Python3.8.12)",
    "language": "python",
-   "name": "base"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6527,7 +6791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   },
   "toc-autonumbering": true
  },
