--- a/DeepLearning-Actions/06-text-processing.ipynb
+++ b/DeepLearning-Actions/06-text-processing.ipynb
@@ -10,12 +10,11 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.19.2\n",
-      "pandas:      1.2.1\n",
-      "matplotlib:  3.3.2\n",
-      "sklearn:     0.22.1\n",
-      "seaborn:     0.11.1\n",
-      "plotly:      4.14.1\n"
+      "numpy:       1.21.5\n",
+      "pandas:      1.4.3\n",
+      "matplotlib:  3.5.2\n",
+      "sklearn:     1.1.1\n",
+      "seaborn:     0.11.2\n"
      ]
     }
    ],
@@ -24,11 +23,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "from plotly import graph_objects as go\n",
+    "# import plotly.express as px\n",
+    "# from plotly import graph_objects as go\n",
     "\n",
     "import matplotlib\n",
-    "import plotly\n",
+    "# import plotly\n",
     "import sklearn\n",
     "import re\n",
     "\n",
@@ -41,7 +40,7 @@
     "print(\"matplotlib: \", matplotlib.__version__)\n",
     "print(\"sklearn:    \", sklearn.__version__)\n",
     "print(\"seaborn:    \", sns.__version__)\n",
-    "print(\"plotly:     \", plotly.__version__)"
+    "# print(\"plotly:     \", plotly.__version__)"
    ]
   },
   {
@@ -2743,9 +2742,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DataAnalysis(Python3.8.13)",
    "language": "python",
-   "name": "python3"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2757,7 +2756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
