--- a/DeepLearning-Actions/05-nlp-basic.ipynb
+++ b/DeepLearning-Actions/05-nlp-basic.ipynb
@@ -455,7 +455,11 @@
     "tags": []
    },
    "source": [
-    "## one-hot"
+    "## one-hot\n",
+    "\n",
+    "one-hot表示就是汇总所有的文本语料，得到其中出现的单词词典 $V$，然后将每个单词表示成一个长度为 $|V|$ 维的向量，对应词出现的位置为 1 .\n",
+    "\n",
+    "这个表示方式产生了大量的稀疏特征和稀疏矩阵，效率很低，不过这种表示法常常是后续词向量的一个出发点。"
    ]
   },
   {
@@ -504,7 +508,7 @@
    "id": "3a7a17e9-572f-4c64-9c35-ede48bc159b9",
    "metadata": {},
    "source": [
-    "# 上下文相关的词向量\n",
+    "## 上下文相关的词向量\n",
     "\n",
     "上一节中的词向量有一个问题，就是同一个词，在不同的句子中（上下文），可能有不同的含义，比如下面的两个句子中的bank意思是不一样的：\n",
     "+ They stood on the river **bank** (河岸) to fish.\n",
@@ -518,9 +522,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1b3bfcb-08ad-44e7-9270-6c9bb0bda8af",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eca825d8-e3b1-4be6-8be5-48519b2bab69",
+   "metadata": {},
+   "source": [
+    "# NLP常用工具包\n",
+    "\n",
+    "NLP基础任务中，常用的Python工具包有如下3个：\n",
+    "+ NLTK：老牌的NLP处理工具，主要是针对英语，提供了分词，词性标注，NER和语法分析树等功能，在早期的NLP学术研究中用的比较多\n",
+    "  + 纯Python写成，生产环境下速度比较慢\n",
+    "  + 没有现代深度学习模型的支持\n",
+    "+ spaCy：一个用于高级自然语言处理的开源软件库 —— KEY\n",
+    "  + 和NLTK功能基本重合\n",
+    "  + 使用Python和CPython混合写成，生产环境下速度更快，适合工业开发\n",
+    "  + 提供了GPU支持\n",
+    "  + 提供预训练的Pipeline支持\n",
+    "+ gensim：主要针对文本的主题模型生成"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92068fb1-20f4-4724-9b99-04d477d42b1d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## NLTK\n",
+    "\n",
+    "可供参考的官方文档：\n",
+    "+ [NLTK](https://www.nltk.org/#)：官网首页\n",
+    "+ [NLTK Python Module Index](https://www.nltk.org/py-modindex.html)：API结构\n",
+    "\n",
+    "\n",
+    "1. 分词.  \n",
+    "NLTK提供了`nltk.tokenize`这个模块，主要是如下两个分词**函数**（不是类）\n",
+    "  + `nltk.tokenize.sent_tokenize(text, language='english')`  \n",
+    "用于分割句子\n",
+    "  + `nltk.tokenize.word_tokenize(text, language='english', preserve_line=False)`  \n",
+    "用于分割单词\n",
+    "\n",
+    "\n",
+    "2. 词干提取.  \n",
+    "NLTK提供了`nltk.stem`这个模块.\n",
+    "  + `nltk.stem.porter.PorterStemmer()`类，封装了Porter提取算法\n",
+    "  + `nltk.stem.snowball`模块里提供了非英语类词干的提取方法\n",
+    "  + `nltk.stem.wordnet.WordNetLemmatizer()`类，提供了词形还原的算法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2b6f26e-3444-4bff-b1d2-859006543412",
+   "metadata": {},
+   "source": [
+    "## spaCy\n",
+    "\n",
+    "官方文档 [spaCy](https://spacy.io/) —— spaCy的官方文档写的挺好的。\n",
+    "\n",
+    "spaCy的使用和NLTK完全不同，NLTK大体上还是面向过程的调用函数方式来完成任务，而spaCy是采用的pipeline方式完成.  \n",
+    "\n",
+    "spaCy中，训练好的模型被称为 **trained pipeline**，这些pipilines实际上也是单独的一个python package。\n",
+    "\n",
+    "spaCy的官网中，提供了一个有关文本处理术语的简单教程 [spacy-101](https://spacy.io/usage/spacy-101)，可以看一看。\n",
+    "\n",
+    "spaCy的使用步骤如下：\n",
+    "1. 载入语言模型.  \n",
+    "每个语言模型里，基于所选的语言，封装了一系列对文件进行处理的Pipeline.\n",
+    "```python\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "```\n",
+    "2. 将需要处理的文本传递给语言模型，生成一个`Doc`对象——它包含了一系列对文本进行处理的步骤，封装成一个Pipeline，其中第一步就是分词\n",
+    "```python\n",
+    "doc = nlp(\"Text to be process\")\n",
+    "```\n",
+    "3. 调用`Doc`对象的各种方法，获取不同的内容."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d7997ba-05cc-42c8-803d-0f4d2916ae4b",
+   "metadata": {},
+   "source": [
+    "## gensim"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89384fe4-2cba-4431-a888-6ed3e6fa918f",
+   "id": "86b70a04-40d8-4301-a87c-171ad2e023e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -528,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataAnalysis(Python3.8.13)",
+   "display_name": "data-analysis(Python3.8.12)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -542,8 +639,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
-  }
+   "version": "3.8.12"
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
