--- a/DeepLearning-Actions/05-nlp-basic.ipynb
+++ b/DeepLearning-Actions/05-nlp-basic.ipynb
@@ -534,18 +534,30 @@
    "id": "eca825d8-e3b1-4be6-8be5-48519b2bab69",
    "metadata": {},
    "source": [
-    "# NLP常用工具包\n",
+    "# NLP常用package\n",
     "\n",
-    "NLP基础任务中，常用的Python工具包有如下3个：\n",
-    "+ NLTK：老牌的NLP处理工具，主要是针对英语，提供了分词，词性标注，NER和语法分析树等功能，在早期的NLP学术研究中用的比较多\n",
+    "NLP基础任务中，常用的Python package有如下3个：\n",
+    "+ NLTK：老牌的NLP处理工具库，主要是针对英语，一般学术研究中用的比较多\n",
+    "  + 重量级的工具包，功能非常全\n",
+    "  + **支持分词、停用词过滤、词干还原、词性标注、命名实体识别和词法解析等各种NLP基础任务**\n",
+    "  + 使用方式偏向于函数过程调用，对面向对象的支持不太好\n",
     "  + 纯Python写成，生产环境下速度比较慢\n",
-    "  + 没有现代深度学习模型的支持\n",
-    "+ spaCy：一个用于高级自然语言处理的开源软件库 —— KEY\n",
-    "  + 和NLTK功能基本重合\n",
+    "  + **不提供常用深度学习模型的支持**\n",
+    "  + 官方文档写的一般，倒是写了一本专门的书来介绍NLTK\n",
+    "+ gensim：主要提供无监督的主题模型(Topic modeling)生成，用于从文本中提取语义表达(semantic representation). \n",
+    "  + 轻量级的package\n",
+    "  + **不提供分词、大小写处理、停用词过滤、词干还原、词性标注，命名实体识别等预处理的功能**\n",
+    "  + 文本的预处理功能常常需要配合NLTK使用\n",
+    "  + 支持潜在语义分析算法：LSA, LDA等\n",
+    "  + 支持词向量模型：word2vec, fastText等\n",
+    "  + **不提供深度学习模型的支持**\n",
+    "+ spaCy：一个用于高级自然语言处理的开源软件库\n",
+    "  + 和NLTK功能基本重合，但是提供NLP整套流程的Pipeline支持\n",
     "  + 使用Python和CPython混合写成，生产环境下速度更快，适合工业开发\n",
     "  + 提供了GPU支持\n",
-    "  + 提供预训练的Pipeline支持\n",
-    "+ gensim：主要针对文本的主题模型生成"
+    "  + 提供深度学习模型的支持\n",
+    "  \n",
+    "总的说来，如果是小型研究或者探究NLP某个基础任务，使用 NLTK+gensim 比较好；如果是生成环境，特别是使用深度学习模型进行文本处理，推荐 spaCy。"
    ]
   },
   {
@@ -562,20 +574,43 @@
     "+ [NLTK](https://www.nltk.org/#)：官网首页\n",
     "+ [NLTK Python Module Index](https://www.nltk.org/py-modindex.html)：API结构\n",
     "\n",
+    "> NLTK的官方文档写的不那么好，没有提供tutorial之类的教程，主要是因为NLTK本身是一个工具包的集合，所以使用的时候，建议想用哪个功能，就去找对应模块的内容即可。\n",
     "\n",
-    "1. 分词.  \n",
-    "NLTK提供了`nltk.tokenize`这个模块，主要是如下两个分词**函数**（不是类）\n",
-    "  + `nltk.tokenize.sent_tokenize(text, language='english')`  \n",
-    "用于分割句子\n",
-    "  + `nltk.tokenize.word_tokenize(text, language='english', preserve_line=False)`  \n",
-    "用于分割单词\n",
+    "常用的NLTK模块如下：\n",
+    "\n",
+    "### 分词\n",
+    "NLTK提供了 `nltk.tokenize` 模块，官方文档 [nltk.tokenize package](https://www.nltk.org/api/nltk.tokenize.html#module-nltk.tokenize).    \n",
+    "主要是如下两个分词**函数**（不是类）\n",
+    "+ `nltk.tokenize.sent_tokenize(text, language='english')`：用于分割句子\n",
+    "+ `nltk.tokenize.word_tokenize(text, language='english', preserve_line=False)`：用于分割单词\n",
+    "\n",
+    "上面两个是该子模块的顶层函数，如果要对分词进行更加细致的控制，`nltk.tokenize`还提供了一系列的子module.\n",
     "\n",
     "\n",
-    "2. 词干提取.  \n",
-    "NLTK提供了`nltk.stem`这个模块.\n",
-    "  + `nltk.stem.porter.PorterStemmer()`类，封装了Porter提取算法\n",
-    "  + `nltk.stem.snowball`模块里提供了非英语类词干的提取方法\n",
-    "  + `nltk.stem.wordnet.WordNetLemmatizer()`类，提供了词形还原的算法"
+    "### 词干提取\n",
+    "NLTK提供了`nltk.stem` 模块，官方文档 [nltk.stem package](https://www.nltk.org/api/nltk.stem.html)\n",
+    "+ `nltk.stem.porter.PorterStemmer()`类，封装了Porter提取算法\n",
+    "+ `nltk.stem.snowball`模块里提供了非英语类词干的提取方法\n",
+    "+ `nltk.stem.wordnet.WordNetLemmatizer()`类，提供了词形还原的算法\n",
+    "  \n",
+    "  \n",
+    "### 词性标注\n",
+    "NLTK提供了 `nltk.tag` 模块，官方文档 [nltk.tag package](https://www.nltk.org/api/nltk.tag.html)\n",
+    "\n",
+    "\n",
+    "### 语料库处理\n",
+    "NLTK提供了 `nltk.corpus` 模块，官方文档 [nltk.corpus package](https://www.nltk.org/api/nltk.corpus.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d7997ba-05cc-42c8-803d-0f4d2916ae4b",
+   "metadata": {},
+   "source": [
+    "## gensim\n",
+    "\n",
+    "官方文档 [gensim documentation](https://radimrehurek.com/gensim/auto_examples/index.html#documentation).\n",
+    "> gensim 本身比较轻量化，整个package的使用通俗易懂，没有太多的API设计，官方文档比较精炼，还提供了tutorial，便于快速上手。"
    ]
   },
   {
@@ -604,14 +639,6 @@
     "doc = nlp(\"Text to be process\")\n",
     "```\n",
     "3. 调用`Doc`对象的各种方法，获取不同的内容."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d7997ba-05cc-42c8-803d-0f4d2916ae4b",
-   "metadata": {},
-   "source": [
-    "## gensim"
    ]
   },
   {
